--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Django==4.1
-gunicorn==19.4.5
-wheel==0.24.0
-whitenoise==2.0.6
+django>=4.0,<5.0
+gunicorn>=20.0,<21.0
+dj-database-url>=1.0,<2.0
+whitenoise>=6.0,<7.0
+psycopg2>=2.0,<3.0
